# Kinect2Viewer

./: CMakeLists.txt  Kinect2Viewer.pro  README.md  Viewer3DKinect2.pro  main.cpp  mykinect.cpp  mykinect.h
